class Usuario
{
private:

public:
    Usuario() {}
    ~Usuario() {}
}; 